# alternet_fork

./: README.md  pyproject.toml
configs/: MAGNet_NF.yaml
data/: minimal_NF_magnet_prefiltered_tpm.tsv  retrieve_data.sh
src/: alternet.output  generate_annotations.R  minimal-working-ex.py  myc-control.py  plot_network.py  submit-minimal-ex.slurm
src/alternet/: alternet_tutorial.ipynb  annotation.py  data_preprocessing.py  downstream_analysis.py  inference.py  postprocessing.py  total_pipeline.py
src/alternet/runners/: infer_nets.py  magnet.py  run_alternet.py
src/alternet/tutorials/: alternet_minimal.ipynb  alternet_tutorial.ipynb  network_analysis.ipynb  preprocess_magnet_minimal.ipynb
