[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "alternet"
version = "0.1.0"
authors = [
  { name="Anne Hartebrodt", email="anne.hartebrodt@fau.de" },
  {name="Juliane Hoffmann", email = "juliane.hoffmann@fau.de"}]
description = "Alternative splicing aware GRNS"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
